# apollo-mcp-server

./: .gitignore  .mcp.json.example  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
apollo_mcp/: __init__.py  client.py  server.py
apollo_mcp/tools/: __init__.py  analytics.py  deals.py  email.py  lists.py  organizations.py  people.py  sequences.py  tasks.py  utility.py  workflows.py
apollo_mcp/utils/: __init__.py  config.py  formatting.py
examples/: basic_usage.py
