[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apollo-mcp-server"
version = "1.0.0"
description = "MCP server for Apollo.io sales engagement platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Apollo MCP Contributors" }
]
keywords = [
    "apollo",
    "mcp",
    "model-context-protocol",
    "sales",
    "outreach",
    "automation",
    "crm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/apollo-mcp-server"
Repository = "https://github.com/yourusername/apollo-mcp-server"
Issues = "https://github.com/yourusername/apollo-mcp-server/issues"

[project.scripts]
apollo-mcp = "apollo_mcp.server:run_server"

[tool.hatch.build.targets.wheel]
packages = ["apollo_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
